--- a/src/app/technical-form/technical-form.component.html
+++ b/src/app/technical-form/technical-form.component.html
@@ -6,106 +6,112 @@
   <div fxFlexOffset="5%" fxFlex="45%">
     <div fxLayout="row">
       <div fxFlex="49%">
-        <md-select [(ngModel)]="model.internet" name="internet" placeholder="Is the Internet service affected?" class="technical-full-width">
-          <md-option *ngFor="let option of options" [value]="option.value">{{ option.value }}</md-option>
-        </md-select>
+        <mat-form-field class="technical-full-width">
+          <mat-select [(ngModel)]="model.internet" name="internet" placeholder="Is the Internet service affected?">
+            <mat-option *ngFor="let option of options" [value]="option.value">{{ option.value }}</mat-option>
+          </mat-select>
+        </mat-form-field>
       </div>
       <div fxFlexOffset="2%" fxFlex="49%">
-        <md-select [(ngModel)]="model.iptv" name="iptv" placeholder="Is the IPTV service affected?" class="technical-full-width">
-          <md-option *ngFor="let option of options" [value]="option.value">{{ option.value }}</md-option>
-        </md-select>
-      </div>
-    </div>
-    <br>
-    <div fxLayout="row">
-      <div fxFlex="49%">
-        <md-form-field class="technical-full-width">
-          <input [(ngModel)]="model.serial" name="serial" mdInput placeholder="ONT Serial Number" >
-        </md-form-field>
-      </div>
-      <div fxFlexOffset="2%" fxFlex="49%">
-        <md-form-field class="technical-full-width">
-          <input mdInput [(ngModel)]="model.date" name="date" [mdDatepicker]="myDatepicker" placeholder="Date issue first surfaced?">
-          <md-datepicker-toggle mdSuffix [for]="myDatepicker"></md-datepicker-toggle>
-          <md-datepicker #myDatepicker></md-datepicker>
-        </md-form-field>        
+        <mat-form-field class="technical-full-width">
+          <mat-select [(ngModel)]="model.iptv" name="iptv" placeholder="Is the IPTV service affected?">
+            <mat-option *ngFor="let option of options" [value]="option.value">{{ option.value }}</mat-option>
+          </mat-select>
+        </mat-form-field>
       </div>
     </div>
     <div fxLayout="row">
       <div fxFlex="49%">
-        <md-select multiple [(ngModel)]="model.profile" name="profile" placeholder="WAN Profiles" class="technical-full-width">
-          <md-option *ngFor="let profile of profiles" [value]="profile.value">{{ profile.value }}</md-option>
-        </md-select>
+        <mat-form-field class="technical-full-width">
+          <input [(ngModel)]="model.serial" name="serial" matInput placeholder="ONT Serial Number" >
+        </mat-form-field>
       </div>
       <div fxFlexOffset="2%" fxFlex="49%">
-        <md-select [(ngModel)]="model.routes" name="routes" placeholder="Routes on ONT?" class="technical-full-width">
-          <md-option *ngFor="let option of options" [value]="option.value">{{ option.value }}</md-option>
-        </md-select>
+        <mat-form-field class="technical-full-width">
+          <input matInput [(ngModel)]="model.date" name="date" [matDatepicker]="myDatepicker" placeholder="Date issue first surfaced?">
+          <mat-datepicker-toggle matSuffix [for]="myDatepicker"></mat-datepicker-toggle>
+          <mat-datepicker #myDatepicker></mat-datepicker>
+        </mat-form-field>        
       </div>
     </div>
-    <br>
-    <md-form-field class="technical-full-width">
-      <textarea mdInput mdTextareaAutosize [(ngModel)]="model.description" name="description" placeholder="Description of the issue"></textarea>
-    </md-form-field>
-    <md-form-field class="technical-full-width">
-      <textarea mdInput mdTextareaAutosize [(ngModel)]="model.steps" name="steps" placeholder="Steps taken to resolve the issue"></textarea>
-    </md-form-field>
-    <md-form-field class="technical-full-width">
-      <textarea mdInput mdTextareaAutosize [(ngModel)]="model.results" name="results" placeholder="Results of steps taken"></textarea>
-    </md-form-field>
-    <md-form-field class="technical-full-width">
-      <textarea mdInput mdTextareaAutosize [(ngModel)]="model.stb" name="stb" placeholder="STB MAC Information"></textarea>
-    </md-form-field>
-    <md-form-field class="technical-full-width">
-      <textarea mdInput mdTextareaAutosize [(ngModel)]="model.alarms" name="alarms" placeholder="Tableau / Alarm Analysis"></textarea>
-    </md-form-field>
-    <md-form-field class="technical-full-width">
-      <textarea mdInput mdTextareaAutosize [(ngModel)]="model.attachments" name="attachments" placeholder="Attachments (DLO/AMSLogs screenshots)"></textarea>
-    </md-form-field>
+    <div fxLayout="row">
+      <div fxFlex="49%">
+        <mat-form-field class="technical-full-width">
+          <mat-select multiple [(ngModel)]="model.profile" name="profile" placeholder="WAN Profiles">
+            <mat-option *ngFor="let profile of profiles" [value]="profile.value">{{ profile.value }}</mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
+      <div fxFlexOffset="2%" fxFlex="49%">
+        <mat-form-field class="technical-full-width">
+          <mat-select [(ngModel)]="model.routes" name="routes" placeholder="Routes on ONT?" >
+            <mat-option *ngFor="let option of options" [value]="option.value">{{ option.value }}</mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
+    </div>
+    <mat-form-field class="technical-full-width">
+      <textarea matInput matTextareaAutosize [(ngModel)]="model.description" name="description" placeholder="Description of the issue"></textarea>
+    </mat-form-field>
+    <mat-form-field class="technical-full-width">
+      <textarea matInput matTextareaAutosize [(ngModel)]="model.steps" name="steps" placeholder="Steps taken to resolve the issue"></textarea>
+    </mat-form-field>
+    <mat-form-field class="technical-full-width">
+      <textarea matInput matTextareaAutosize [(ngModel)]="model.results" name="results" placeholder="Results of steps taken"></textarea>
+    </mat-form-field>
+    <mat-form-field class="technical-full-width">
+      <textarea matInput matTextareaAutosize [(ngModel)]="model.stb" name="stb" placeholder="STB MAC Information"></textarea>
+    </mat-form-field>
+    <mat-form-field class="technical-full-width">
+      <textarea matInput matTextareaAutosize [(ngModel)]="model.alarms" name="alarms" placeholder="Tableau / Alarm Analysis"></textarea>
+    </mat-form-field>
+    <mat-form-field class="technical-full-width">
+      <textarea matInput matTextareaAutosize [(ngModel)]="model.attachments" name="attachments" placeholder="Attachments (DLO/AMSLogs screenshots)"></textarea>
+    </mat-form-field>
     <h4 class="mat-h4">Customer network setup details:</h4>
     <div fxLayout="row">
       <div fxFlex="49%">
-        <md-form-field class="technical-full-width">
-          <input [(ngModel)]="model.port1" name="port1" mdInput placeholder="Port 1" >
-        </md-form-field>
+        <mat-form-field class="technical-full-width">
+          <input [(ngModel)]="model.port1" name="port1" matInput placeholder="Port 1" >
+        </mat-form-field>
       </div>
       <div fxFlexOffset="2%" fxFlex="49%">
-        <md-form-field class="technical-full-width">
-          <input [(ngModel)]="model.port2" name="port2" mdInput placeholder="Port 2" >
-        </md-form-field>
+        <mat-form-field class="technical-full-width">
+          <input [(ngModel)]="model.port2" name="port2" matInput placeholder="Port 2" >
+        </mat-form-field>
       </div>
     </div>
     <div fxLayout="row">
       <div fxFlex="49%">
-        <md-form-field class="technical-full-width">
-          <input [(ngModel)]="model.port3" name="port3" mdInput placeholder="Port 3" >
-        </md-form-field>
+        <mat-form-field class="technical-full-width">
+          <input [(ngModel)]="model.port3" name="port3" matInput placeholder="Port 3" >
+        </mat-form-field>
       </div>
       <div fxFlexOffset="2%" fxFlex="49%">
-        <md-form-field class="technical-full-width">
-          <input [(ngModel)]="model.port4" name="port4" mdInput placeholder="Port 4" >
-        </md-form-field>
+        <mat-form-field class="technical-full-width">
+          <input [(ngModel)]="model.port4" name="port4" matInput placeholder="Port 4" >
+        </mat-form-field>
       </div>
     </div>
     <div fxLayout="row">
       <div fxFlex="49%">
-        <md-form-field class="technical-full-width">
-          <input [(ngModel)]="model.ghz24" name="ghz24" mdInput placeholder="2.4 Ghz" >
-        </md-form-field>
+        <mat-form-field class="technical-full-width">
+          <input [(ngModel)]="model.ghz24" name="ghz24" matInput placeholder="2.4 Ghz" >
+        </mat-form-field>
       </div>
       <div fxFlexOffset="2%" fxFlex="49%">
-        <md-form-field class="technical-full-width">
-          <input [(ngModel)]="model.ghz5" name="ghz5" mdInput placeholder="5 Ghz" >
-        </md-form-field>
+        <mat-form-field class="technical-full-width">
+          <input [(ngModel)]="model.ghz5" name="ghz5" matInput placeholder="5 Ghz" >
+        </mat-form-field>
       </div>
     </div>
   </div>
   <div fxFlexOffset="5%" fxFlex="44%">
-    <md-card>
-      <md-card-title>{{title}} Template Preview</md-card-title>
-      <md-card-content>
-        <md-form-field class="technical-full-width">
-          <textarea #technical mdInput mdTextareaAutosize readonly>Is the Internet service affected?: {{model.internet}}
+    <mat-card>
+      <mat-card-title>{{title}} Template Preview</mat-card-title>
+      <mat-card-content>
+        <mat-form-field class="technical-full-width">
+          <textarea #technical matInput matTextareaAutosize readonly>Is the Internet service affected?: {{model.internet}}
 
 Is the IPTV service affected?: {{model.iptv}}
 
@@ -137,13 +143,13 @@ Tableau / Alarm Analysis: {{model.alarms}}
 
 Attachments: {{model.attachments}}
           </textarea>
-        </md-form-field>
-      </md-card-content>
-      <md-card-actions>
-        <button md-button [ngxClipboard]='technical'>COPY</button>
-        <button md-button (click)="reset()">CLEAR</button>
-      </md-card-actions>
-    </md-card>
+        </mat-form-field>
+      </mat-card-content>
+      <mat-card-actions>
+        <button mat-button [ngxClipboard]='technical'>COPY</button>
+        <button mat-button (click)="reset()">CLEAR</button>
+      </mat-card-actions>
+    </mat-card>
 
   </div>
 </div>
