--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,13 @@
-<md-toolbar color="primary">
+<mat-toolbar color="primary">
   <span>{{ title }} </span>
-</md-toolbar>
+</mat-toolbar>
 
-<md-sidenav-container fullscreen>
-  <md-sidenav mode="side" opened="true">
-    <md-nav-list *ngFor="let template of templates">
-      <a md-list-item  [routerLink]= template.url>{{ template.name }}</a>
-    </md-nav-list>
+<mat-sidenav-container fullscreen>
+  <mat-sidenav mode="side" opened="true">
+    <mat-nav-list *ngFor="let template of templates">
+      <a mat-list-item  [routerLink]= template.url>{{ template.name }}</a>
+    </mat-nav-list>
     <!-- <span *ngFor="let template in Templates">{{ template.name }} Template</span> -->
-  </md-sidenav>
+  </mat-sidenav>
   <div class="my-content"><router-outlet></router-outlet></div>
-</md-sidenav-container>
+</mat-sidenav-container>
