--- a/src/app/billing-form/billing-form.component.html
+++ b/src/app/billing-form/billing-form.component.html
@@ -6,46 +6,50 @@
   <div fxFlexOffset="5%" fxFlex="45%">
     <div fxLayout="row">
       <div fxFlex="49%">
-        <md-form-field class="billing-full-width">
-          <input [(ngModel)]="model.balance" name="balance" mdInput placeholder="Total Outstanding Amount (Tableau)" >
-        </md-form-field>
+        <mat-form-field class="billing-full-width">
+          <input [(ngModel)]="model.balance" name="balance" matInput placeholder="Total Outstanding Amount (Tableau)" >
+        </mat-form-field>
       </div>
       <div fxFlexOffset="2%" fxFlex="49%">
-        <md-form-field class="billing-full-width">
-          <input [(ngModel)]="model.due" name="due" mdInput placeholder="Amount Due" >
-        </md-form-field>
+        <mat-form-field class="billing-full-width">
+          <input [(ngModel)]="model.due" name="due" matInput placeholder="Amount Due" >
+        </mat-form-field>
       </div>
     </div>
     <div fxLayout="row">
       <div fxFlex="49%">
-        <md-select [(ngModel)]="model.cycle" name="cycle" placeholder="Billing Cycle" class="billing-full-width">
-          <md-option *ngFor="let cycle of cycles" [value]="cycle.value">{{ cycle.value }}</md-option>
-        </md-select>
+        <mat-form-field class="billing-full-width">
+          <mat-select [(ngModel)]="model.cycle" name="cycle" placeholder="Billing Cycle">
+            <mat-option *ngFor="let cycle of cycles" [value]="cycle.value">{{ cycle.value }}</mat-option>
+          </mat-select>
+        </mat-form-field>
       </div>
       <div fxFlexOffset="2%" fxFlex="49%">
-        <md-form-field class="billing-full-width">
-          <input [(ngModel)]="model.account" name="account" mdInput placeholder="Account Number Requested" >
-        </md-form-field>
+        <mat-form-field class="billing-full-width">
+          <input [(ngModel)]="model.account" name="account" matInput placeholder="Account Number Requested" >
+        </mat-form-field>
       </div>
     </div>
     <div fxLayout="row">
       <div fxFlex="49%">
-        <md-select [(ngModel)]="model.verified" name="verified" placeholder="I.D Verified" class="billing-full-width">
-          <md-option *ngFor="let option of options" [value]="option.value">{{ option.value }}</md-option>
-        </md-select>
+        <mat-form-field class="billing-full-width">
+          <mat-select [(ngModel)]="model.verified" name="verified" placeholder="I.D Verified">
+            <mat-option *ngFor="let option of options" [value]="option.value">{{ option.value }}</mat-option>
+          </mat-select>
+        </mat-form-field>
       </div>
     </div>
     <br>
-    <md-form-field class="billing-full-width">
-      <textarea mdInput mdTextareaAutosize [(ngModel)]="model.comments" name="comments" placeholder="Additional Comments"></textarea>
-    </md-form-field>
+    <mat-form-field class="billing-full-width">
+      <textarea matInput matTextareaAutosize [(ngModel)]="model.comments" name="comments" placeholder="Additional Comments"></textarea>
+    </mat-form-field>
   </div>
   <div fxFlexOffset="5%" fxFlex="44%">
-    <md-card>
-      <md-card-title>{{title}} Template Preview</md-card-title>
-      <md-card-content>
-        <md-form-field class="billing-full-width">
-          <textarea #billing mdInput mdTextareaAutosize readonly>Total Outstanding Amount (Tableau): {{model.balance}}
+    <mat-card>
+      <mat-card-title>{{title}} Template Preview</mat-card-title>
+      <mat-card-content>
+        <mat-form-field class="billing-full-width">
+          <textarea #billing matInput matTextareaAutosize readonly>Total Outstanding Amount (Tableau): {{model.balance}}
 
 Amount Due: {{model.due}}
 
@@ -57,12 +61,12 @@ I.D. Verified: {{model.verified}}
 
 Additional Comments: {{model.comments}}
           </textarea>
-        </md-form-field>
-      </md-card-content>
-      <md-card-actions>
-        <button md-button [ngxClipboard]='billing'>COPY</button>
-        <button md-button (click)='reset()'>CLEAR</button>
-      </md-card-actions>
-    </md-card>
+        </mat-form-field>
+      </mat-card-content>
+      <mat-card-actions>
+        <button mat-button [ngxClipboard]='billing'>COPY</button>
+        <button mat-button (click)='reset()'>CLEAR</button>
+      </mat-card-actions>
+    </mat-card>
   </div>
 </div>
