--- a/src/app/csp-form/csp-form.component.html
+++ b/src/app/csp-form/csp-form.component.html
@@ -7,38 +7,40 @@
     <form>
       <div fxLayout="row">
         <div fxFlex="49%">
-          <md-select multiple [(ngModel)]="model.issue" name="issuetype" placeholder="What is the reported Service Issue?" class="csp-full-width">
-            <md-option *ngFor="let serviceIssue of serviceIssues" [value]="serviceIssue.value">{{ serviceIssue.value }}</md-option>
-          </md-select>
+          <mat-form-field class="csp-full-width">
+            <mat-select multiple [(ngModel)]="model.issue" name="issuetype" placeholder="What is the reported Service Issue?">
+              <mat-option *ngFor="let serviceIssue of serviceIssues" [value]="serviceIssue.value">{{ serviceIssue.value }}</mat-option>
+            </mat-select>
+          </mat-form-field>
         </div>
         <div fxFlexAlign="center" fxFlexOffset="2%" fxFlex="49%">
-          <md-form-field class="csp-full-width">
-            <input mdInput [(ngModel)]="model.date" name="date" [mdDatepicker]="myDatepicker" placeholder="Date when issue first surfaced">
-            <md-datepicker-toggle mdSuffix [for]="myDatepicker"></md-datepicker-toggle>
-            <md-datepicker #myDatepicker></md-datepicker>
-          </md-form-field>          
+          <mat-form-field class="csp-full-width">
+            <input matInput [(ngModel)]="model.date" name="date" [matDatepicker]="myDatepicker" placeholder="Date when issue first surfaced">
+            <mat-datepicker-toggle matSuffix [for]="myDatepicker"></mat-datepicker-toggle>
+            <mat-datepicker #myDatepicker></mat-datepicker>
+          </mat-form-field>          
         </div>
       </div>
-      <md-form-field class="csp-full-width">
-        <textarea mdInput mdTextareaAutosize [(ngModel)]="model.iptv" name="iptv" placeholder="IPTV Only"></textarea>
-      </md-form-field>
-      <md-form-field class="csp-full-width">
-        <textarea mdInput mdTextareaAutosize [(ngModel)]="model.internet" name="internet" placeholder="Internet Only"></textarea>
-      </md-form-field>
-      <md-form-field class="csp-full-width">
-        <textarea mdInput mdTextareaAutosize [(ngModel)]="model.both" name="both" placeholder="Both IPTV and Internet"></textarea>
-      </md-form-field>
-      <md-form-field class="csp-full-width">
-        <textarea mdInput mdTextareaAutosize [(ngModel)]="model.info" name="info" placeholder="Additional Info"></textarea>
-      </md-form-field>
+      <mat-form-field class="csp-full-width">
+        <textarea matInput matTextareaAutosize [(ngModel)]="model.iptv" name="iptv" placeholder="IPTV Only"></textarea>
+      </mat-form-field>
+      <mat-form-field class="csp-full-width">
+        <textarea matInput matTextareaAutosize [(ngModel)]="model.internet" name="internet" placeholder="Internet Only"></textarea>
+      </mat-form-field>
+      <mat-form-field class="csp-full-width">
+        <textarea matInput matTextareaAutosize [(ngModel)]="model.both" name="both" placeholder="Both IPTV and Internet"></textarea>
+      </mat-form-field>
+      <mat-form-field class="csp-full-width">
+        <textarea matInput matTextareaAutosize [(ngModel)]="model.info" name="info" placeholder="Additional Info"></textarea>
+      </mat-form-field>
     </form>
   </div>
   <div fxFlexOffset="5%" fxFlex="44%">
-    <md-card>
-      <md-card-title>{{title}} Template Preview</md-card-title>
-      <md-card-content>
-        <md-form-field class="csp-full-width-height">
-          <textarea #csp mdInput mdTextareaAutosize readonly>What is the reported Service Issue?: {{model.issue}}
+    <mat-card>
+      <mat-card-title>{{title}} Template Preview</mat-card-title>
+      <mat-card-content>
+        <mat-form-field class="csp-full-width-height">
+          <textarea #csp matInput matTextareaAutosize readonly>What is the reported Service Issue?: {{model.issue}}
 
 Date when issue first surfaced: {{model.date | date: 'mediumDate'}}
 
@@ -50,12 +52,12 @@ Both IPTV and Internet: {{model.both}}
 
 Additional Info: {{model.info}}
           </textarea>
-        </md-form-field>
-      </md-card-content>
-      <md-card-actions>
-        <button md-button [ngxClipboard]='csp'>COPY</button>
-        <button md-button (click)="reset()">CLEAR</button>
-      </md-card-actions>
-    </md-card>
+        </mat-form-field>
+      </mat-card-content>
+      <mat-card-actions>
+        <button mat-button [ngxClipboard]='csp'>COPY</button>
+        <button mat-button (click)="reset()">CLEAR</button>
+      </mat-card-actions>
+    </mat-card>
   </div>
 </div>
