--- a/src/app/headerbar/headerbar.component.html
+++ b/src/app/headerbar/headerbar.component.html
@@ -1,30 +1,30 @@
-<md-toolbar color="primary">
+<mat-toolbar color="primary">
   <ng-content select="[title]"></ng-content>
   <span class="toolbar-spacer"></span>
   
-  <button md-icon-button [routerLink]="['/home']">
-    <md-icon>home</md-icon>  
+  <button mat-icon-button [routerLink]="['/home']">
+    <mat-icon>home</mat-icon>  
   </button>
 
-  <button md-icon-button [mdMenuTriggerFor]="menu">
-      <md-icon>more_vert</md-icon>
+  <button mat-icon-button [matMenuTriggerFor]="menu">
+      <mat-icon>more_vert</mat-icon>
     </button>
-    <md-menu #menu="mdMenu">
-      <button md-menu-item (click)="feederMap()">
-        <md-icon>place</md-icon>
+    <mat-menu #menu="matMenu">
+      <button mat-menu-item (click)="feederMap()">
+        <mat-icon>place</mat-icon>
         <span>Feeder Map</span>
       </button>
-      <button md-menu-item (click)="surepayMap()">
-        <md-icon>place</md-icon>
+      <button mat-menu-item (click)="surepayMap()">
+        <mat-icon>place</mat-icon>
         <span>Surepay Map</span>
       </button>
-      <button md-menu-item (click)="openDialog()">
-        <md-icon>account_circle</md-icon>
+      <button mat-menu-item (click)="openDialog()">
+        <mat-icon>account_circle</mat-icon>
         <span>Contact List</span>
       </button>
-      <button md-menu-item disabled>
-        <md-icon>monetization_on</md-icon>
+      <button mat-menu-item disabled>
+        <mat-icon>monetization_on</mat-icon>
         <span>Bundle Calculator</span>
       </button>
-    </md-menu>  
-</md-toolbar>
+    </mat-menu>  
+</mat-toolbar>
