--- a/src/app/highspeed-form/highspeed-form.component.html
+++ b/src/app/highspeed-form/highspeed-form.component.html
@@ -6,38 +6,40 @@
   <div fxFlexOffset="5%" fxFlex="45%">
     <div fxLayout="row">
       <div fxFlex="31%">
-        <md-select [(ngModel)]="user.title" name="title" placeholder="Professional's Title" class="highspeed-full-width">
-          <md-option *ngFor="let title of titles" [value]="title.value">{{ title.value }}</md-option>
-        </md-select>
+        <mat-form-field class="highspeed-full-width">
+          <mat-select [(ngModel)]="user.title" name="title" placeholder="Professional's Title">
+            <mat-option *ngFor="let title of titles" [value]="title.value">{{ title.value }}</mat-option>
+          </mat-select>
+        </mat-form-field>
       </div>
       <div fxFlexOffset="2%" fxFlex="31%">
-        <md-form-field class="highspeed-full-width">
-          <input [(ngModel)]="user.firstname" name="firstname" mdInput placeholder="Professional's Firstname" >
-        </md-form-field>
+        <mat-form-field class="highspeed-full-width">
+          <input [(ngModel)]="user.firstname" name="firstname" matInput placeholder="Professional's Firstname" >
+        </mat-form-field>
       </div>
       <div fxFlexOffset="2%" fxFlex="31%">
-        <md-form-field class="highspeed-full-width">
-          <input [(ngModel)]="user.lastname" name="lastname" mdInput placeholder="Professional's Lastname" >
-        </md-form-field>
+        <mat-form-field class="highspeed-full-width">
+          <input [(ngModel)]="user.lastname" name="lastname" matInput placeholder="Professional's Lastname" >
+        </mat-form-field>
       </div>
     </div>
     <div fxLayout="row">
-      <md-form-field class="highspeed-full-width">
-        <input [(ngModel)]="model.cusname" name="cusname" mdInput placeholder="Customer's Name" >
-      </md-form-field>
+      <mat-form-field class="highspeed-full-width">
+        <input [(ngModel)]="model.cusname" name="cusname" matInput placeholder="Customer's Name" >
+      </mat-form-field>
     </div>
     <div fxLayout="row">
-      <md-form-field class="highspeed-full-width">
-        <textarea mdInput mdTextareaAutosize [(ngModel)]="model.info" name="info" placeholder="Response"></textarea>
-      </md-form-field>
+      <mat-form-field class="highspeed-full-width">
+        <textarea matInput matTextareaAutosize [(ngModel)]="model.info" name="info" placeholder="Response"></textarea>
+      </mat-form-field>
     </div>
   </div>
   <div fxFlexOffset="5%" fxFlex="44%">
-    <md-card>
-      <md-card-title>{{title}} Template Preview</md-card-title>
-      <md-card-content>
-        <md-form-field class="highspeed-full-width">
-          <textarea #highspeed mdInput mdTextareaAutosize readonly>Dear {{model.cusname}},
+    <mat-card>
+      <mat-card-title>{{title}} Template Preview</mat-card-title>
+      <mat-card-content>
+        <mat-form-field class="highspeed-full-width">
+          <textarea #highspeed matInput matTextareaAutosize readonly>Dear {{model.cusname}},
 
 Thank you for contacting us at Massy Communications.
 
@@ -49,12 +51,12 @@ Thank you for choosing Massy Communications.
 
 Kind regards,
 {{user.firstname}} {{user.lastname}} on behalf of Massy Communications Customer Care Team</textarea>
-        </md-form-field>
-      </md-card-content>
-      <md-card-actions>
-        <button md-button [ngxClipboard]='highspeed'>COPY</button>
-        <button md-button (click)="reset()">CLEAR</button>
-      </md-card-actions>
-    </md-card>
+        </mat-form-field>
+      </mat-card-content>
+      <mat-card-actions>
+        <button mat-button [ngxClipboard]='highspeed'>COPY</button>
+        <button mat-button (click)="reset()">CLEAR</button>
+      </mat-card-actions>
+    </mat-card>
   </div>
 </div>
