--- a/src/app/payment-form/payment-form.component.html
+++ b/src/app/payment-form/payment-form.component.html
@@ -7,41 +7,41 @@
     <form>
       <div fxLayout="row">
         <div fxFlex="49%">
-          <md-form-field class="payment-full-width">
-            <input [(ngModel)]="model.invoice" name="invoice" mdInput placeholder="Invoice Number" >
-          </md-form-field>
+          <mat-form-field class="payment-full-width">
+            <input [(ngModel)]="model.invoice" name="invoice" matInput placeholder="Invoice Number" >
+          </mat-form-field>
         </div>
         <div fxFlexOffset=2% fxFlex="49%">
-          <md-form-field class="payment-full-width">
-            <input mdInput [(ngModel)]="model.date" name="date" [mdDatepicker]="myDatepicker" placeholder="Date Invoice Paid">
-            <md-datepicker-toggle mdSuffix [for]="myDatepicker"></md-datepicker-toggle>
-            <md-datepicker #myDatepicker></md-datepicker>
-          </md-form-field>          
+          <mat-form-field class="payment-full-width">
+            <input matInput [(ngModel)]="model.date" name="date" [matDatepicker]="myDatepicker" placeholder="Date Invoice Paid">
+            <mat-datepicker-toggle matSuffix [for]="myDatepicker"></mat-datepicker-toggle>
+            <mat-datepicker #myDatepicker></mat-datepicker>
+          </mat-form-field>          
         </div>
       </div>
       <div fxLayout="row">
         <div fxFlex="49%">
-          <md-form-field class="payment-full-width">
-            <input [(ngModel)]="model.amount" name="amount" mdInput placeholder="Amount Paid" >
-          </md-form-field>
+          <mat-form-field class="payment-full-width">
+            <input [(ngModel)]="model.amount" name="amount" matInput placeholder="Amount Paid" >
+          </mat-form-field>
         </div>
         <div fxFlexOffset="2%" fxFlex="49%">
-          <md-form-field class="payment-full-width">
-            <input [(ngModel)]="model.receipt" name="receipt" mdInput placeholder="Receipt Number" >
-          </md-form-field>
+          <mat-form-field class="payment-full-width">
+            <input [(ngModel)]="model.receipt" name="receipt" matInput placeholder="Receipt Number" >
+          </mat-form-field>
         </div>
       </div>
-      <md-form-field class="payment-full-width">
-        <textarea mdInput mdTextareaAutosize [(ngModel)]="model.comments" name="comments" placeholder="Additional Comments"></textarea>
-      </md-form-field>
+      <mat-form-field class="payment-full-width">
+        <textarea matInput matTextareaAutosize [(ngModel)]="model.comments" name="comments" placeholder="Additional Comments"></textarea>
+      </mat-form-field>
     </form>
   </div>
   <div fxFlexOffset="5%" fxFlex="44%">
-    <md-card>
-      <md-card-title>{{title}} Template Preview</md-card-title>
-      <md-card-content>
-        <md-form-field class="payment-full-width">
-          <textarea #payment mdInput mdTextareaAutosize readonly>Invoice Number: {{model.invoice}}
+    <mat-card>
+      <mat-card-title>{{title}} Template Preview</mat-card-title>
+      <mat-card-content>
+        <mat-form-field class="payment-full-width">
+          <textarea #payment matInput matTextareaAutosize readonly>Invoice Number: {{model.invoice}}
 
 Date Invoice Paid: {{model.date | date: 'mediumDate'}}
 
@@ -51,12 +51,12 @@ Receipt Number: {{model.receipt}}
 
 Additional Comments: {{model.comments}}
           </textarea>
-        </md-form-field>
-      </md-card-content>
-      <md-card-actions>
-        <button md-button [ngxClipboard]='payment'>COPY</button>
-        <button md-button (click)="reset()">CLEAR</button>
-      </md-card-actions>
-    </md-card>
+        </mat-form-field>
+      </mat-card-content>
+      <mat-card-actions>
+        <button mat-button [ngxClipboard]='payment'>COPY</button>
+        <button mat-button (click)="reset()">CLEAR</button>
+      </mat-card-actions>
+    </mat-card>
   </div>
 </div>
