--- a/src/app/relocation-form/relocation-form.component.html
+++ b/src/app/relocation-form/relocation-form.component.html
@@ -7,97 +7,105 @@
     <form>
       <div fxLayout="row">
         <div fxFlex="49%">
-          <md-select [(ngModel)]="model.cycle" name="cycle" placeholder="Billing Cycle" class="relocation-full-width">
-            <md-option *ngFor="let cycle of cycles" [value]="cycle.value">{{ cycle.value }}</md-option>
-          </md-select>
+          <mat-form-field class="relocation-full-width">
+            <mat-select [(ngModel)]="model.cycle" name="cycle" placeholder="Billing Cycle">
+              <mat-option *ngFor="let cycle of cycles" [value]="cycle.value">{{ cycle.value }}</mat-option>
+            </mat-select>
+          </mat-form-field>
         </div>
         <div fxFlexOffset="2%" fxFlex="49%">
-          <md-form-field class="relocation-full-width">
-            <input [(ngModel)]="model.area" name="area" mdInput placeholder="Area Customer is moving to" >
-          </md-form-field>
+          <mat-form-field class="relocation-full-width">
+            <input [(ngModel)]="model.area" name="area" matInput placeholder="Area Customer is moving to" >
+          </mat-form-field>
         </div>
       </div>
       <div fxLayout="row">
         <div fxFlex="49%">
-          <md-form-field class="relocation-full-width">
-            <input [(ngModel)]="model.oldPackage" name="oldPackage" mdInput placeholder="Existing Package" [mdAutocomplete]="existing">
-            <md-autocomplete #existing="mdAutocomplete">
-                <md-option *ngFor="let package of packages" [value]="package.name">{{ package.name }}</md-option>
-            </md-autocomplete>
-          </md-form-field>
+          <mat-form-field class="relocation-full-width">
+            <input [(ngModel)]="model.oldPackage" name="oldPackage" matInput placeholder="Existing Package" [matAutocomplete]="existing">
+            <mat-autocomplete #existing="matAutocomplete">
+                <mat-option *ngFor="let package of packages" [value]="package.name">{{ package.name }}</mat-option>
+            </mat-autocomplete>
+          </mat-form-field>
         </div>
         <div fxFlexOffset="2%" fxFlex="49%">
-          <md-select multiple [(ngModel)]="model.oldAddons" name="oldAddons" placeholder="Add-on Packages" class="relocation-full-width">
-            <md-option *ngFor="let addon of addons" [value]="addon.name">{{ addon.name }}</md-option>
-          </md-select>
+          <mat-form-field class="relocation-full-width">
+            <mat-select multiple [(ngModel)]="model.oldAddons" name="oldAddons" placeholder="Add-on Packages">
+              <mat-option *ngFor="let addon of addons" [value]="addon.name">{{ addon.name }}</mat-option>
+            </mat-select>
+          </mat-form-field>
         </div>
       </div>
       <div fxLayout="row">
         <div fxFlex="49%">
-          <md-form-field class="relocation-full-width">
-            <input [(ngModel)]="model.newPackage" name="newPackage" mdInput placeholder="New Package Requested" >
-          </md-form-field>
+          <mat-form-field class="relocation-full-width">
+            <input [(ngModel)]="model.newPackage" name="newPackage" matInput placeholder="New Package Requested" >
+          </mat-form-field>
         </div>
         <div fxFlexOffset="2%" fxFlex="49%">
-          <md-select multiple [(ngModel)]="model.newAddons" name="newAddons" placeholder="Add-on Packages" class="relocation-full-width">
-            <md-option *ngFor="let addon of addons" [value]="addon.name">{{ addon.name }}</md-option>
-          </md-select>
+          <mat-form-field class="relocation-full-width">
+            <mat-select multiple [(ngModel)]="model.newAddons" name="newAddons" placeholder="Add-on Packages">
+              <mat-option *ngFor="let addon of addons" [value]="addon.name">{{ addon.name }}</mat-option>
+            </mat-select>
+          </mat-form-field>
         </div>
       </div>
       <div fxLayout="row">
         <div fxFlex="49%">
-          <md-form-field class="relocation-full-width">
-            <input mdInput [(ngModel)]="model.installDate" name="installdate" [mdDatepicker]="installDatepicker" placeholder="Installation Date?">
-            <md-datepicker-toggle mdSuffix [for]="installDatepicker"></md-datepicker-toggle>
-            <md-datepicker #installDatepicker></md-datepicker>
-          </md-form-field>
+          <mat-form-field class="relocation-full-width">
+            <input matInput [(ngModel)]="model.installDate" name="installdate" [matDatepicker]="installDatepicker" placeholder="Installation Date?">
+            <mat-datepicker-toggle matSuffix [for]="installDatepicker"></mat-datepicker-toggle>
+            <mat-datepicker #installDatepicker></mat-datepicker>
+          </mat-form-field>
         </div>
         <div fxFlexOffset="2%" fxFlex="49%">
-          <md-form-field class="relocation-full-width">
-            <input mdInput [(ngModel)]="model.removalDate" name="removaldate" [mdDatepicker]="myDatepicker" placeholder="Removal Date">
-            <md-datepicker-toggle mdSuffix [for]="myDatepicker"></md-datepicker-toggle>
-            <md-datepicker #myDatepicker></md-datepicker>
-          </md-form-field>
+          <mat-form-field class="relocation-full-width">
+            <input matInput [(ngModel)]="model.removalDate" name="removaldate" [matDatepicker]="myDatepicker" placeholder="Removal Date">
+            <mat-datepicker-toggle matSuffix [for]="myDatepicker"></mat-datepicker-toggle>
+            <mat-datepicker #myDatepicker></mat-datepicker>
+          </mat-form-field>
         </div>
       </div>
       <div fxLayout="row">
         <div fxFlex="49%">
-          <md-form-field class="relocation-full-width">
-            <input [(ngModel)]="model.bundle" name="bundle" mdInput placeholder="Bundle to be cancelled" >
-          </md-form-field>
+          <mat-form-field class="relocation-full-width">
+            <input [(ngModel)]="model.bundle" name="bundle" matInput placeholder="Bundle to be cancelled" >
+          </mat-form-field>
         </div>
         <div fxFlexOffset="2%" fxFlex="49%">
-          <md-select [(ngModel)]="model.rebate" name="rebate" placeholder="Rebate Needed?" class="relocation-full-width">
-            <md-option *ngFor="let option of options" [value]="option.value">{{ option.value }}</md-option>
-          </md-select>
+          <mat-form-field class="relocation-full-width">
+            <mat-select [(ngModel)]="model.rebate" name="rebate" placeholder="Rebate Needed?">
+              <mat-option *ngFor="let option of options" [value]="option.value">{{ option.value }}</mat-option>
+            </mat-select>
+          </mat-form-field>
         </div>
       </div>
       <br>
       <div fxLayout="row">
-          <md-form-field class="relocation-full-width">
-            <textarea mdInput mdTextareaAutosize [(ngModel)]="model.calculation" name="calculation" placeholder="Rebate Calculation"></textarea>
-          </md-form-field>
+          <mat-form-field class="relocation-full-width">
+            <textarea matInput matTextareaAutosize [(ngModel)]="model.calculation" name="calculation" placeholder="Rebate Calculation"></textarea>
+          </mat-form-field>
       </div>
       <br>
       <div fxLayout="row">
-        <md-form-field class="relocation-full-width">
-          <input [(ngModel)]="model.amount" name="amount" mdInput placeholder="Rebate" >
-        </md-form-field>
+        <mat-form-field class="relocation-full-width">
+          <input [(ngModel)]="model.amount" name="amount" matInput placeholder="Rebate" >
+        </mat-form-field>
       </div>
       <br>
       <div fxLayout="row">
-        <md-form-field class="relocation-full-width">
-          <textarea mdInput mdTextareaAutosize [(ngModel)]="model.info" name="info" placeholder="Any Additional Info"></textarea>
-        </md-form-field>
+        <mat-form-field class="relocation-full-width">
+          <textarea matInput matTextareaAutosize [(ngModel)]="model.info" name="info" placeholder="Any Additional Info"></textarea>
+        </mat-form-field>
       </div>
     </form>
   </div>
   <div fxFlexOffset="5%" fxFlex="44%">
-    <md-card>
-      <md-card-title>{{title}} Template Preview</md-card-title>
-      <md-card-content>
-        <md-form-field class="relocation-full-width">
-          <textarea #relocation mdInput mdTextareaAutosize readonly>Bill Cycle: {{model.cycle}}
+    <mat-card>
+      <mat-card-title>{{title}} Template Preview</mat-card-title>
+      <mat-card-content>
+        <mat-form-field class="relocation-full-width">
+          <textarea #relocation matInput matTextareaAutosize readonly>Bill Cycle: {{model.cycle}}
 
 Area Customer Is Moving To: {{model.area}}
 
@@ -123,12 +131,12 @@ Rebate Needed: {{model.amount}}
 
 Any additional information: {{model.info}}
           </textarea>
-        </md-form-field>
-      </md-card-content>
-      <md-card-actions>
-        <button md-button [ngxClipboard]='relocation'>COPY</button>
-        <button md-button (click)="reset()">CLEAR</button>
-      </md-card-actions>
-    </md-card>
+        </mat-form-field>
+      </mat-card-content>
+      <mat-card-actions>
+        <button mat-button [ngxClipboard]='relocation'>COPY</button>
+        <button mat-button (click)="reset()">CLEAR</button>
+      </mat-card-actions>
+    </mat-card>
   </div>
 </div>
