--- a/src/app/updown-form/updown-form.component.html
+++ b/src/app/updown-form/updown-form.component.html
@@ -6,60 +6,67 @@
   <div fxFlexOffset="5%" fxFlex="45%">
     <div fxLayout="row">
       <div fxFlex="49%">
-        <md-form-field class="updown-full-width">
-          <input [(ngModel)]="model.oldBundle" name="oldBundle" mdInput placeholder="Existing BND#" >
-        </md-form-field>
+        <mat-form-field class="updown-full-width">
+          <input [(ngModel)]="model.oldBundle" name="oldBundle" matInput placeholder="Existing BND#" >
+        </mat-form-field>
       </div>
     </div>
     <div fxLayout="row">
       <div fxFlex="49%">
-        <md-form-field class="updown-full-width">
-          <input [(ngModel)]="model.newBundle" name="newBundle" mdInput placeholder="New Package Requested" >
-        </md-form-field>
+        <mat-form-field class="updown-full-width">
+          <input [(ngModel)]="model.newBundle" name="newBundle" matInput placeholder="New Package Requested" >
+        </mat-form-field>
       </div>
       <div fxFlexOffset="2%" fxFlex="49%">
-        <md-select multiple [(ngModel)]="model.addons" name="addons" placeholder="Additional Packages (Movies, etc)" class="updown-full-width">
-          <md-option *ngFor="let addon of addons" [value]="addon.name">{{ addon.name }}</md-option>
-        </md-select>
+        <mat-form-field class="updown-full-width">
+          <mat-select multiple [(ngModel)]="model.addons" name="addons" placeholder="Additional Packages (Movies, etc)" >
+            <mat-option *ngFor="let addon of addons" [value]="addon.name">{{ addon.name }}</mat-option>
+          </mat-select>
+        </mat-form-field>
       </div>
     </div>
     <div fxLayout="row">
       <div fxFlex="49%">
-        <md-select [(ngModel)]="model.stb" name="stb" placeholder="Additional STB (8083)" class="updown-full-width">
-          <md-option *ngFor="let index of count" [value]="index">{{ index }}</md-option>
-        </md-select>
+        <mat-form-field class="updown-full-width">
+          <mat-select [(ngModel)]="model.stb" name="stb" placeholder="Additional STB (8083)">
+            <mat-option *ngFor="let index of count" [value]="index">{{ index }}</mat-option>
+          </mat-select>
+      </mat-form-field>
       </div>
       <div fxFlexOffset="2%" fxFlex="49%">
-        <md-select [(ngModel)]="model.pvr" name="pvr" placeholder="Additional PVR (9000)" class="updown-full-width">
-          <md-option *ngFor="let index of count" [value]="index">{{ index }}</md-option>
-        </md-select>
+        <mat-form-field class="updown-full-width">
+          <mat-select [(ngModel)]="model.pvr" name="pvr" placeholder="Additional PVR (9000)">
+            <mat-option *ngFor="let index of count" [value]="index">{{ index }}</mat-option>
+          </mat-select>
+        </mat-form-field>
       </div>
     </div>
-    <br>
     <div fxLayout="row">
       <div fxFlex="49%">
-        <md-select [(ngModel)]="model.onsite" name="onsite" placeholder="Requires Onsite Activation" class="updown-full-width">
-          <md-option *ngFor="let option of options" [value]="option.value">{{ option.value }}</md-option>
-        </md-select>
+        <mat-form-field class="updown-full-width">
+          <mat-select [(ngModel)]="model.onsite" name="onsite" placeholder="Requires Onsite Activation">
+            <mat-option *ngFor="let option of options" [value]="option.value">{{ option.value }}</mat-option>
+          </mat-select>
+        </mat-form-field>
       </div>
       <div fxFlexOffset="2%" fxFlex="49%">
-        <md-form-field class="updown-full-width">
-          <input [(ngModel)]="model.order" name="workorder" mdInput placeholder="Work Order#" >
-        </md-form-field>
+        <mat-form-field class="updown-full-width">
+          <input [(ngModel)]="model.order" name="workorder" matInput placeholder="Work Order#" >
+        </mat-form-field>
       </div>
     </div>
     <div fxLayout="row">
-      <md-form-field class="updown-full-width">
-        <textarea mdInput mdTextareaAutosize [(ngModel)]="model.info" name="info" placeholder="Any Additional Info"></textarea>
-      </md-form-field>
+      <mat-form-field class="updown-full-width">
+        <textarea matInput matTextareaAutosize [(ngModel)]="model.info" name="info" placeholder="Any Additional Info"></textarea>
+      </mat-form-field>
     </div>
   </div>
   <div fxFlexOffset="5%" fxFlex="44%">
-    <md-card>
-      <md-card-title>{{ title }} Template Preview</md-card-title>
-        <md-card-content>
-          <md-form-field class="updown-full-width">
-            <textarea #updown mdInput mdTextareaAutosize readonly>Existing BND#: {{model.oldBundle}}
+    <mat-card>
+      <mat-card-title>{{ title }} Template Preview</mat-card-title>
+        <mat-card-content>
+          <mat-form-field class="updown-full-width">
+            <textarea #updown matInput matTextareaAutosize readonly>Existing BND#: {{model.oldBundle}}
 
 New Package Requested: {{model.newBundle}}
 
@@ -75,12 +82,12 @@ Work Order#: {{model.order}}
 
 Additional Information: {{model.info}}
             </textarea>
-          </md-form-field>
-        </md-card-content>
-        <md-card-actions>
-          <button md-button [ngxClipboard]='updown'>COPY</button>
-          <button md-button (click)="reset()">CLEAR</button>
-        </md-card-actions>
-    </md-card>
+          </mat-form-field>
+        </mat-card-content>
+        <mat-card-actions>
+          <button mat-button [ngxClipboard]='updown'>COPY</button>
+          <button mat-button (click)="reset()">CLEAR</button>
+        </mat-card-actions>
+    </mat-card>
   </div>
 </div>
