--- a/src/app/work-form/work-form.component.html
+++ b/src/app/work-form/work-form.component.html
@@ -4,25 +4,25 @@
 <br>
 <div fxLayout="row">
   <div fxFlexOffset="5%" fxFlex="45%">
-    <md-form-field class="work-full-width">
-      <textarea mdInput mdTextareaAutosize [(ngModel)]="model.summary" name="summary" placeholder="Summary"></textarea>
-    </md-form-field>
-    <md-form-field class="work-full-width">
-      <textarea mdInput mdTextareaAutosize [(ngModel)]="model.history" name="history" placeholder="History"></textarea>
-    </md-form-field>
-    <md-form-field class="work-full-width">
-      <textarea mdInput mdTextareaAutosize [(ngModel)]="model.results" name="results" placeholder="Test Results"></textarea>
-    </md-form-field>
-    <md-form-field class="work-full-width">
-      <textarea mdInput mdTextareaAutosize [(ngModel)]="model.recommendations" name="recommendations" placeholder="Recommendations"></textarea>
-    </md-form-field>
+    <mat-form-field class="work-full-width">
+      <textarea matInput matTextareaAutosize [(ngModel)]="model.summary" name="summary" placeholder="Summary"></textarea>
+    </mat-form-field>
+    <mat-form-field class="work-full-width">
+      <textarea matInput matTextareaAutosize [(ngModel)]="model.history" name="history" placeholder="History"></textarea>
+    </mat-form-field>
+    <mat-form-field class="work-full-width">
+      <textarea matInput matTextareaAutosize [(ngModel)]="model.results" name="results" placeholder="Test Results"></textarea>
+    </mat-form-field>
+    <mat-form-field class="work-full-width">
+      <textarea matInput matTextareaAutosize [(ngModel)]="model.recommendations" name="recommendations" placeholder="Recommendations"></textarea>
+    </mat-form-field>
   </div>
   <div fxFlexOffset="5%" fxFlex="44%">
-    <md-card>
-      <md-card-title>{{title}} Template Preview</md-card-title>
-      <md-card-content>
-        <md-form-field class="work-full-width">
-          <textarea #work mdInput mdTextareaAutosize readonly>Summary: {{model.summary}}
+    <mat-card>
+      <mat-card-title>{{title}} Template Preview</mat-card-title>
+      <mat-card-content>
+        <mat-form-field class="work-full-width">
+          <textarea #work matInput matTextareaAutosize readonly>Summary: {{model.summary}}
 
 History: {{model.history}}
 
@@ -30,13 +30,13 @@ Test Results: {{model.results}}
 
 Recommendations: {{model.recommendations}}
           </textarea>
-        </md-form-field>
-      </md-card-content>
-      <md-card-actions>
-        <button md-button [ngxClipboard]='work'>COPY</button>
-        <button md-button (click)="reset()">CLEAR</button>
-      </md-card-actions>
-    </md-card>
+        </mat-form-field>
+      </mat-card-content>
+      <mat-card-actions>
+        <button mat-button [ngxClipboard]='work'>COPY</button>
+        <button mat-button (click)="reset()">CLEAR</button>
+      </mat-card-actions>
+    </mat-card>
 
   </div>
 </div>
